--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
         <header>
             <img class="logoret"src="imagens/logo ret preto.png" >
             
-           <img class="logo" src="imagens/STAR GEEKS STAR.png">
+           <img class="logo" src="imagens/STAR.png">
         </header>
     
         <main>
