--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>stargeeks-home</title>
+    <title>stargeeks  home</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
 <section>
   <p>TENHA ACESSO A DIVERSOS CONTEÚDOS DE SUA <br> PREFERÊNCIA, SÓ AQUI NA    STARGEEKS!</p>
 
-  <a href="btn-01">FAÇA JÁ O SEU CADASTRO</a>
+  <a href="cadastro.html">FAÇA JÁ O SEU CADASTRO</a>
 </section>
 
 <main>
