--- a/catalogo.html
+++ b/catalogo.html
@@ -27,7 +27,8 @@
     <main>
         <nav> 
             <h1>MEUS FAVORITOS</h1>
-            <a href="">CADASTRAR ITEM</a>
+            <a href="">CADASTRAR ITEM
+            </a>
         </nav>
        
         <p>MÚSICAS</p>
@@ -113,7 +114,7 @@
 
 </div>
 
-
+<script src="catalogo.js"></script>
 
     
 </body>
