--- a/catalogo.html
+++ b/catalogo.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="btnheader">
-        <a href="">Voltar para página inical</a>
+        <a href="index.html" id="voltarpginicial">Voltar para página inical</a>
     </div>
     
     </header>
@@ -27,7 +27,7 @@
     <main>
         <nav> 
             <h1>MEUS FAVORITOS</h1>
-            <a href="">CADASTRAR ITEM
+            <a href="cadastroitem.html"id="cadastraritem">CADASTRAR ITEM
             </a>
         </nav>
        
